--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-vercel": "^1.0.0",
+		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.0.0",
 		"marked": "^4.2.1",
 		"prettier": "^2.7.1",
